fix datetime div alignment

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ html {
 body {
   min-width: 100%;
   min-height: 100%;
-
   margin: 0;
   padding: 0;
   line-height: 1.6;
@@ -50,7 +49,9 @@ header {
   display: block;
   width: 100%;
   height: 5rem;
-  margin-top: -3rem;
+  margin-top: -4rem;
+  padding: auto;
+
 }
 
 #title a {
@@ -154,13 +155,6 @@ label[for="nav-trigger"] {
   left: 195px;
 }
 
-#poem {
-  font-size:30px;
-  color:#292929;
-  text-align: left;
-  display: inline-block;
-}
-
 #readout {
   font-size: 20px;
   position: absolute;
@@ -174,33 +168,43 @@ label[for="nav-trigger"] {
   text-align: left;
   position: absolute;
   left: 40px;
-  padding-top: 4%;
+  top: 200px;
 }
 
 h1,h2,h3 {
   line-height: double;
 }
 
+#container {
+  max-width: 45%;
+  height: 100%;
+  margin: auto;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+  display: inline-block;
+  text-align: left;
+}
 
 #date_time {
   font-size: 0.9em;
   color: #0000ff;
-  display: inline-block;
+  display: block;
   font-weight: lighter;
   text-align: left;
-  width: auto;
-  position: absolute;
-  top: 17%;
-  right: 46%;
+  width: 100%;
+  margin: auto auto;
+  padding: auto auto;
 }
 
 #poem {
-  max-width: 45%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   display: inline-block;
-  border-radius: 10px;
-  padding-bottom: 8%;
+  padding: auto auto;
+  font-size:30px;
+  color:#292929;
+  text-align: left;
 }
 
 #poem h2 {
